--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!doctype html>
+<html>
+  <head><meta charset="utf-8"><title>Test</title></head>
+  <body style="font-family:Arial; background:#ffe6f0; color:#111; display:grid; place-items:center; height:100vh;">
+    <h1>It works 💖</h1>
+  </body>
+</html>
