--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <button class="no" id="noBtn">No 🙃</button>
       </div>
 
-      <div class="hint">Tip: if video doesn’t show, make sure it’s named <b>valentine.mp4</b> and in this same folder.</div>
+      <div class="hint">Tip: if you press no I'm never speaking to you again.</div>
     </div>
   </div>
 
