--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <!-- Put your couple photo in the folder and name it us.jpg (or change src below) -->
       <img id="usPhoto" class="usPhoto" src="us.jpg" alt="Us" />
 
-      <p class="hint" id="photoHint">If the photo isn’t showing yet, that’s okay—add it later as <b>us.jpg</b>.</p>
+      <p class="hint" id="photoHint"> Welp Now you're my valentine, and you're 4'5 my love.</p>
       <div style="margin-top:14px;">
         <button class="yes" onclick="closeOverlay()">Aww 🥰</button>
       </div>
