--- a/index.html
+++ b/index.html
@@ -213,15 +213,15 @@
   <!-- Celebration -->
   <div class="overlay" id="overlay">
     <div class="celebrateCard">
-      <h2 class="celebrateTitle">YAYYY!! 🎉💞</h2>
-      <p class="celebrateText">Okay it’s official… you’re my Valentine 😘🌹</p>
+      <h2 class="celebrateTitle"> TYPE SHIIII!! 🎉💞</h2>
+      <p class="celebrateText"> Good Decision, I love you so much you poop 😘🌹</p>
 
       <!-- Put your couple photo in the folder and name it us.jpg (or change src below) -->
       <img id="usPhoto" class="usPhoto" src="us.jpg" alt="Us" />
 
-      <p class="hint" id="photoHint"> Welp Now you're my valentine, and you're 4'5 my love.</p>
+      <p class="hint" id="photoHint"> Poops and fart at the same time hitting the OOPS!😅 </p>
       <div style="margin-top:14px;">
-        <button class="yes" onclick="closeOverlay()">Aww 🥰</button>
+        <button class="yes" onclick="closeOverlay()"> You're Him! 🥰</button>
       </div>
     </div>
   </div>
